# BrickDestroyer

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: fragmentShader.glsl  particleFS.glsl  particleVS.glsl  text_2d_fs.glsl  text_2d_vs.glsl  vertexShader.glsl  waterFS.glsl  waterVS.glsl
app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt
app/src/main/cpp/src/: Engine.cpp  Engine.h  Game.cpp  Game.h  gameStates.hpp  main.cpp
app/src/main/cpp/src/UI/: UIController.cpp  UIController.h  ui.cpp  ui.h
app/src/main/cpp/src/algorithms/: CellData.cpp  CellData.h  indicesGenerator.cpp  indicesGenerator.h
app/src/main/cpp/src/audio/: MusicBuffer.cpp  MusicBuffer.h  SoundBuffer.cpp  SoundBuffer.h  soundDevice.cpp  soundDevice.h  soundSource.cpp  soundSource.h
app/src/main/cpp/src/graphics/: Direction.hpp  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp  SpriteRenderer.h
app/src/main/cpp/src/graphics/Effects/: Cracks.cpp  Cracks.h  Particles.cpp  Particles.h
app/src/main/cpp/src/graphics/Level/: GameLevel.cpp  GameLevel.h
app/src/main/cpp/src/graphics/models/: Character.cpp  Character.h  GameObject.cpp  GameObject.h
app/src/main/cpp/src/graphics/rendering/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
app/src/main/cpp/src/graphics/text/: textRenderer.cpp  textRenderer.h
app/src/main/java/com/example/myapplication/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
